version/0.18/_sources/api/solver/_autosummary/settings/multiband.rst.txt
:orphan:

.. _multiband:

multiband
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.multiband.multiband
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`multiband_child <multiband_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`radiation <radiation>`       'radiation' child.

============================   ======================

