version/0.19/_sources/api/solver/_autosummary/settings/multiband.rst.txt
:orphan:

.. _multiband:

multiband
=========

.. autoclass:: ansys.fluent.core.solver.settings_241.multiband.multiband
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`multiband_child <multiband_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`radiation <radiation>`       'radiation' child.

============================   ======================

